--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "main": "src/index.js",
   "dependencies": {
     "@blueprintjs/core": "^3.50.1",
+    "bootstrap": "^5.1.1",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
-    "react-bootstrap": "^1.6.1",
-    "react-dom": "17.0.2",
+    "react-bootstrap": "^1.6.3",
+    "react-bootstrap-4-pagination": "^1.0.4",
+    "react-dom": "^17.0.2",
     "react-if": "^4.0.1",
     "react-paginate": "^7.1.3",
-    "react-router-dom": "5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "uuid": "^8.3.2"
   },
